--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The no-code app platform. Easily build powerful digital solutions to solve complex business problems, without coding"
+      content="Blockchain Technology Solutions | Ethereum Solutions | Tesseract"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tesseract | Lego Blocks to build Applications</title>
+    <title>Tesseract | The Metaverse Company</title>
 
 
   </head>
